// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.event.v1;

import "google/protobuf/empty.proto";
import "teleport/event/v1/event.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/event/v1;eventv1";

// EventService is a service that provides access to events.
service EventService {
  // WatchEvents returns a new stream of cluster events
  // buf:lint:ignore RPC_NO_SERVER_STREAMING
  // buf:lint:ignore RPC_REQUEST_STANDARD_NAME
  rpc WatchEvents(Watch) returns (stream Event);

  // WatchPendingHeadlessAuthentications watches the backend for pending headless authentication requests for the user.
  // buf:lint:ignore RPC_NO_SERVER_STREAMING
  // buf:lint:ignore RPC_REQUEST_STANDARD_NAME
  rpc WatchPendingHeadlessAuthentications(google.protobuf.Empty) returns (stream Event);
}
